--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<script type="text/javascript">
 		
 		$.get("info.txt", function(data) {
-			alert("data");
+			alert(data);
 		});
 
 	</script>
