"docs: fifth update"

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<script type="text/javascript">
 		
-		$.$.ajax({
+		$.ajax({
 			url: 'info.txt',
 			type: 'default GET (Other values: POST)',
 			dataType: 'default: Intelligent Guess (Other values: xml, json, script, or html)',
