"docs: sixth commit"

--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
 	<script type="text/javascript">
 		
 		$.ajax({
-			url: 'info.txt',
-			type: 'default GET (Other values: POST)',
-			dataType: 'default: Intelligent Guess (Other values: xml, json, script, or html)',
-			data: {param1: 'value1'},
+			url: 'info.txt'
 		})
 		.done(function(data) {
 			alert(data);
