"docs: seventh commit"

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<script type="text/javascript">
 		
 		$.ajax({
-			url: 'infoo.txt'
+			url: 'info.txt'
 		})
 		.done(function(data) {
 			alert(data);
