--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			url: 'info.txt'
 		})
 		.done(function(data) {
-			$("moreText").attr('text', 'yolo');
+			$("#moreText").attr('text', 'yolo');
 		})
 		.fail(function() {
 			alert("Could not get data");
