--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			url: 'info.txt'
 		})
 		.done(function(data) {
-			$("#moreText").text('yolo');
+			$("#moreText").html(data);
 		})
 		.fail(function() {
 			alert("Could not get data");
